added module data and created functionality to print all module data to the dom

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 </head>
 <body>
 
+<div id="solarSystemDiv">
+</div>
+
 <script type="text/javascript" src="dist/app.js"></script>
 </body>
 </html>
