--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Solar System</title>
 	<link rel="stylesheet" type="text/css" href="styles/main.css">
 </head>
 <body>
+<h1 id="pagetitle">Solar System</h1>
 
 <div id="solarSystemDiv">
 </div>
